# steamcmd

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
steamcmd/: base.py  enums.py  left4dead2.py  systemd.py
steamcmd/templates/: base_install_app.j2  sourcemod_admin_groups.cfg.j2  sourcemod_admins_simple.ini.j2  systemd.service.j2  systemd.socket.j2
